--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
             <h2>Ilość otrzymanych punktów dodatnich:</h2>
             <p id="wynik2"></p>
         </div>
-    </div>  
+    </div> 
+    <div class="suma-ostateczna">
+        <h2>Twoja łączna ilość punktów</h2>
+        <p id="wynik3"></p>
+    </div>
     </form>
     </div>
 </div>
+<hr>
+<footer>Copyright by Filip Gryzło and ChatGPT ©</footer>
 <script src="jafka_projekt.js"></script>
 </body>
 </html>
